# Ingos-Simple-LLM-Benchmark-and-Evaluation

./: .gitignore  NOTES_ON_TASK_DESIGN.md  README.md  generate_model_report.py  pyproject.toml  run_benchmark.py
ingollmbencheval/: __init__.py  benchmark.py  database.py  report.py  utils.py
tasks/: context.json  knowledge-sc.json  math.json  misc.json  output-format.json  text-manipulation.json  translation.json
test/: test_benchmark.py  test_utils.py
