[tool.poetry]
name = "ingollmbencheval"
version = "0.1.0"
description = "A set of personal benchmarks and evaluations for LLMs."
authors = ["Ingo Kleiber <ingo@kleiber.me>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
pytest = "^8.3.3"
openai = "^1.45.0"
sqlalchemy = "^2.0.34"

[tool.poetry.scripts]
create-database = "ingollmbencheval.database:create_database"
recreate-database = "ingollmbencheval.database:recreate_database"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
